--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,17 @@
 
+
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/cathaybk_demo
-    username: postgres
+    driver-class-name: org.h2.Driver
+    username: 'sa'
+    password:
+    url: 'jdbc:h2:mem:cathaybk_demo'
+  h2:
+    console:
+      enabled: true
+      path: '/h2'
   jpa:
     generate-ddl: false
     open-in-view: true
-    properties:
-      hibernate:
-        #format_sql: true
-        show-sql: true
-        default_schema: public
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-#        ddl-auto: create-drop
-        jdbc:
-          time_zone: GMT+8
+#    hibernate:
+#     ddl-auto: update  # ? spring boot entity ????, ????? DB scheam
